<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aelment.thatj.chroma.EndScreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/bestScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/score"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="21dp"
            android:text="@string/bestScore"
            android:textSize="40sp"
            android:typeface="serif"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/score"
            app:layout_constraintVertical_bias="0.023" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/score"
            android:textSize="40sp"
            android:typeface="serif"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_below="@+id/gameMode"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/gameMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="62dp"
            android:text="@string/gamemode"
            android:textSize="25sp"
            android:typeface="serif"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/retryButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bestScore"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:background="@color/colorMenuButton"
            android:text="@string/retrybuttonString"
            android:textAllCaps="false"
            android:textSize="23sp"
            android:typeface="serif" />

        <Button
            android:id="@+id/menuButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/retryButton"
            android:layout_below="@+id/retryButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:background="@color/colorMenuButton"
            android:text="@string/menuButton"
            android:textAllCaps="false"
            android:textSize="23sp"
            android:typeface="serif" />


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
