<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aelment.thatj.chroma.HowTo">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginStart="8dp">

        <TextView
            android:id="@+id/tagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="149dp"
            android:gravity="center_horizontal"
            android:text="@string/taglineString"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:typeface="serif" />

        <TextView
            android:id="@+id/tagline2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/backButton"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="101dp"
            android:gravity="center_horizontal"
            android:text="@string/tagline3"
            android:textSize="20sp"
            android:textStyle="italic"
            android:typeface="serif" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="58dp"
            android:background="@color/colorMenuButton"
            android:text="@string/backButton"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:typeface="serif"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
