<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aelment.thatj.chroma.GameScreen"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/readyTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/readyTimer"
        android:textSize="100sp"
        android:typeface="serif"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_vertical|center_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="224dp" />

    <TextView
        android:id="@+id/gameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/gameTextString"
        android:textSize="45sp"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="@+id/buttonLayout"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.122" />

    <RelativeLayout
        android:id="@+id/buttonLayout"
        android:layout_width="340dp"
        android:layout_height="350dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.885">

        <ImageButton
            android:id="@+id/gameButton1"
            android:layout_width="170dp"
            android:layout_height="175dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            app:srcCompat="@color/colorButton1" />

        <ImageButton
            android:id="@+id/gameButton2"
            android:layout_width="170dp"
            android:layout_height="175dp"
            android:background="@android:color/transparent"
            app:srcCompat="@color/colorButton2"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/gameButton1" />

        <ImageButton
            android:id="@+id/gameButton3"
            android:layout_width="170dp"
            android:layout_height="175dp"
            android:background="@android:color/transparent"
            app:srcCompat="@color/colorButton3"
            android:layout_below="@+id/gameButton1"
            android:layout_alignParentStart="true" />

        <ImageButton
            android:id="@+id/gameButton4"
            android:layout_width="170dp"
            android:layout_height="175dp"
            android:layout_below="@+id/gameButton1"
            android:layout_toEndOf="@+id/gameButton3"
            android:background="@android:color/transparent"
            app:srcCompat="@color/colorButton4" />
    </RelativeLayout>

    <TextView
        android:id="@+id/points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/points"
        android:textSize="35sp"
        android:typeface="serif"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer"
        android:textSize="35sp"
        android:typeface="serif"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

</android.support.constraint.ConstraintLayout>
