<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aelment.thatj.chroma.IntroScreen">

    <RelativeLayout
        android:id="@+id/introLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/animateSquare1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignStart="@+id/titleText"
            android:layout_alignTop="@+id/twobytwo"
            android:layout_marginTop="18dp"
            app:srcCompat="@color/transOrange" />

        <ImageView
            android:id="@+id/animateSquare2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_above="@+id/threebythree"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="33dp"
            android:layout_marginEnd="47dp"
            app:srcCompat="@color/transGreen" />

        <ImageView
            android:id="@+id/animateSquare3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="13dp"
            android:layout_toEndOf="@+id/animateSquare6"
            app:srcCompat="@color/transPurple" />

        <ImageView
            android:id="@+id/animateSquare4"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignEnd="@+id/threebythree"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="11dp"
            android:layout_marginEnd="20dp"
            app:srcCompat="@color/transBlue" />

        <ImageView
            android:id="@+id/animateSquare5"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_below="@+id/threebythree"
            android:layout_marginTop="38dp"
            android:layout_toStartOf="@+id/threebythree"
            app:srcCompat="@color/transRed" />

        <ImageView
            android:id="@+id/animateSquare6"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_above="@+id/animateSquare2"
            android:layout_toStartOf="@+id/twobytwo"
            app:srcCompat="@color/transBrown" />

        <ImageView
            android:id="@+id/animateSquare7"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="19dp"
            app:srcCompat="@color/transYellow"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/twobytwo" />

        <ImageView
            android:id="@+id/animateSquare8"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_above="@+id/animateSquare4"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="31dp"
            app:srcCompat="@color/transPink" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="72dp"
            android:text="@string/titleString"
            android:textColor="?attr/actionMenuTextColor"
            android:textSize="60sp"
            android:typeface="serif" />

        <ImageButton
            android:id="@+id/muteButton"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="35dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            android:tint="@color/colorPrimaryDark"
            app:srcCompat="@android:drawable/ic_lock_silent_mode" />

        <Button
            android:id="@+id/twobytwo"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/threebythree"
            android:layout_centerVertical="true"
            android:background="@color/colorMenuButton"
            android:text="@string/twobytwo"
            android:textAllCaps="false"
            android:textColor="@android:color/background_dark"
            android:textSize="30sp"
            android:typeface="serif" />

        <Button
            android:id="@+id/threebythree"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/twobytwo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="44dp"
            android:background="@color/colorMenuButton"
            android:text="@string/threebythree"
            android:textAllCaps="false"
            android:textColor="@android:color/background_dark"
            android:textSize="30sp"
            android:typeface="serif" />

        <Button
            android:id="@+id/howToPlay"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="35dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/howToPlay"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleText"
            android:layout_centerHorizontal="true"
            android:text="@string/header"
            android:textSize="22sp"
            android:textStyle="italic"
            android:typeface="serif" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
